# orbital-shape-sim

./: .gitignore  AGENTS.md  CITATION.cff  Makefile  README.md  TODO.md  main.py  physics_scenarios.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: leo_100km.yaml  leo_10km.yaml  leo_50km.yaml
docs/: diamond_chapter.md  diamond_l1_chapter.md  diamond_l1_planning.md  diamond_l1_reachability_chapter.md  l4_l5_planning.md  make_svgs.py  neural_controller.md  numerics.md  overview.md  passive_drift_repro.py  passive_simulation_findings.md  rigid_barbell_chapter.md  roadmap.md  torque_accel_table.md  torque_accel_table.py  variable_length_chapter.md
docs/blender_l1_diamond/: generate_earth_moon_l1_diamond.py
failed_ideas/moon_tidal_tether/: AGENTS.md  (+1 more)
scoops/: generate_orbital_scoop_svgs.py
sims/: landis_demo.py  make_diamond_animation.py  run_fom_scenarios.py  run_leo_100km.py  run_single_vs_double_barbell.py  run_sweep_extent.py  train_nn_controller.py
tests/: test_cli_run.py  test_controller_interface.py  test_diamond.py  test_diamond_l1.py  test_diamond_sim.py  test_earth_collision.py  test_energy_growth_baseline.py  test_initial_spin_modes.py  test_l1_mass_driver.py  test_l1_reachability.py  test_landis_controller.py  test_leo_derived_output.py  test_leo_initial_balance.py  test_leo_yaml_config.py  test_plotting_quicklook.py  test_point_mass_sim.py  test_power_filter_stability.py  test_power_sign_controller.py  test_quadrupole_mapping.py  test_tension_constraints.py  test_tether_length_control.py  test_tidal_forcing_switch.py
(+95 files in other folders)
