[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-shape-sim"
version = "0.1.0"
description = "Simulation of orbital tethers and multiple masses in orbit"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pillow"
]

[tool.setuptools.packages.find]
where = ["src"]
